crates/cobrust-lsp/tests/snapshots/wave_3_e2e__snapshot_goto_def_known_symbol.snap
---
source: crates/cobrust-lsp/tests/wave_3_e2e.rs
expression: result
snapshot_kind: text
---
{
  "uri": "file:///test.cb",
  "range": {
    "start": {
      "line": 0,
      "character": 4
    },
    "end": {
      "line": 0,
      "character": 5
    }
  }
}
