crates/cobrust-lsp/tests/snapshots/wave_3_e2e__snapshot_rename_cross_file_three_uri_partial.snap
---
source: crates/cobrust-lsp/tests/wave_3_e2e.rs
expression: changes
snapshot_kind: text
---
{
  "file:///a.cb": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 4
        },
        "end": {
          "line": 0,
          "character": 7
        }
      },
      "newText": "qux"
    },
    {
      "range": {
        "start": {
          "line": 1,
          "character": 0
        },
        "end": {
          "line": 1,
          "character": 3
        }
      },
      "newText": "qux"
    }
  ],
  "file:///b.cb": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 0
        },
        "end": {
          "line": 0,
          "character": 3
        }
      },
      "newText": "qux"
    }
  ]
}
