crates/cobrust-lsp/tests/snapshots/wave_3_e2e__snapshot_rename_cross_file_two_uri.snap
---
source: crates/cobrust-lsp/tests/wave_3_e2e.rs
expression: changes
snapshot_kind: text
---
{
  "file:///a.cb": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 4
        },
        "end": {
          "line": 0,
          "character": 10
        }
      },
      "newText": "renamed"
    },
    {
      "range": {
        "start": {
          "line": 1,
          "character": 0
        },
        "end": {
          "line": 1,
          "character": 6
        }
      },
      "newText": "renamed"
    }
  ],
  "file:///b.cb": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 0
        },
        "end": {
          "line": 0,
          "character": 6
        }
      },
      "newText": "renamed"
    }
  ]
}
